{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 30,
  "lineage": "41a0bff9-b5de-cd55-e203-8c626bb49302",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:internet-gateway/igw-0386473fa138d4cb0",
            "id": "igw-0386473fa138d4cb0",
            "owner_id": "224872310034",
            "tags": {
              "Name": "Hassan-myIG"
            },
            "tags_all": {
              "Name": "Hassan-myIG"
            },
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:route-table/rtb-073c7e28dcccf714c",
            "id": "rtb-073c7e28dcccf714c",
            "owner_id": "224872310034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Hassan-RT"
            },
            "tags_all": {
              "Name": "Hassan-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:route-table/rtb-0e94eb2061c8aeac2",
            "id": "rtb-0e94eb2061c8aeac2",
            "owner_id": "224872310034",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0386473fa138d4cb0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Hassan-RT"
            },
            "tags_all": {
              "Name": "Hassan-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.myIG",
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myPRTAssoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e20486f5e5a2fa49",
            "route_table_id": "rtb-073c7e28dcccf714c",
            "subnet_id": "subnet-034a3879393fc80c4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.myPrivateRT",
            "module.vpc.aws_subnet.myPRSub1",
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myPRTAssoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb311e11b43bd789",
            "route_table_id": "rtb-073c7e28dcccf714c",
            "subnet_id": "subnet-06bb19749613d0565"
          },
          "dependencies": [
            "module.vpc.aws_route_table.myPrivateRT",
            "module.vpc.aws_subnet.myPRSub2",
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myRTAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03893bddaf86a4856",
            "route_table_id": "rtb-0e94eb2061c8aeac2",
            "subnet_id": "subnet-0ea926c92b6a2bc92"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.myIG",
            "module.vpc.aws_route_table.myRT",
            "module.vpc.aws_subnet.mySubPub",
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySGApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:security-group/sg-0a9aa278b828794d3",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9aa278b828794d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg12345",
            "name_prefix": "",
            "owner_id": "224872310034",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySGDB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:security-group/sg-0f725548861fdda8c",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f725548861fdda8c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "sql from instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9aa278b828794d3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "app-sg1234567",
            "name_prefix": "",
            "owner_id": "224872310034",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.mySGApp",
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myPRSub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:subnet/subnet-034a3879393fc80c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034a3879393fc80c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224872310034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HassanPRSub1"
            },
            "tags_all": {
              "Name": "HassanPRSub1"
            },
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myPRSub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:subnet/subnet-06bb19749613d0565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bb19749613d0565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224872310034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HassanPRSub2"
            },
            "tags_all": {
              "Name": "HassanPRSub2"
            },
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubPub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:subnet/subnet-0ea926c92b6a2bc92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea926c92b6a2bc92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224872310034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Hassan-mySubPub"
            },
            "tags_all": {
              "Name": "Hassan-mySubPub"
            },
            "vpc_id": "vpc-058f2f6f948861281"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:224872310034:vpc/vpc-058f2f6f948861281",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb5c520249a57ecc",
            "default_route_table_id": "rtb-0137d9af979f71150",
            "default_security_group_id": "sg-0a0cd711c804de96b",
            "dhcp_options_id": "dopt-0cc04f1da134c73af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058f2f6f948861281",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0137d9af979f71150",
            "owner_id": "224872310034",
            "tags": {
              "Name": "Hassan-myVPC"
            },
            "tags_all": {
              "Name": "Hassan-myVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:224872310034:instance/i-0c5fd2ef0764e77a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5fd2ef0764e77a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "LinuxDay4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf601fff69168d05",
            "private_dns": "ip-10-0-1-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "35.178.110.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0614ab0c810f94d18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a9aa278b828794d3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea926c92b6a2bc92",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9aa278b828794d3"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.mySGApp",
            "module.vpc.aws_subnet.mySubPub"
          ]
        }
      ]
    }
  ]
}